# mdminecraft

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMBAT_GUIDE.md  CONTRIBUTING.md  CRAFTING_RECIPES.md  Cargo.toml  DEMO_GUIDE.md  FOOD_GUIDE.md  FURNACE_SMELTING_GUIDE.md  GEMINI.md  HOSTILE_MOBS_GUIDE.md  LICENSE  ORE_GENERATION_GUIDE.md  PROJECT_SUMMARY.md  RALPH_ASSESSMENT.md  RALPH_ITERATION_1.md  RALPH_ITERATION_10.md  RALPH_ITERATION_11.md  RALPH_ITERATION_12.md  RALPH_ITERATION_13.md  RALPH_ITERATION_15.md  RALPH_ITERATION_16.md  RALPH_ITERATION_18.md  RALPH_ITERATION_2.md  RALPH_ITERATION_21.md  RALPH_ITERATION_22.md  RALPH_ITERATION_23.md  RALPH_ITERATION_24.md  RALPH_ITERATION_3.md  RALPH_ITERATION_4.md  RALPH_ITERATION_6.md  RALPH_ITERATION_7.md  RALPH_ITERATION_8.md  RALPH_ITERATION_9.md  RALPH_PROGRESS.md  RALPH_PROMPT.md  RALPH_TEXTURE_COMPOSITING.md  README.md  (+3 more)
.claude/: ralph-loop.local.md
config/: blocks.json  controls.toml  recipes.json
crates/app/: Cargo.toml  README.md
crates/app/src/: inventory.rs  main.rs  world_save.rs
crates/assets/: Cargo.toml
crates/assets/src/: atlas.rs  lib.rs  loader.rs  recipe_registry.rs  registry.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  manager.rs  settings.rs  sounds.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  multiplayer.rs
crates/net/: Cargo.toml
crates/net/src/: channel.rs  chunk_encoding.rs  chunk_streaming.rs  codec.rs  connection.rs  entity_replication.rs  lib.rs  prediction.rs  protocol.rs  replay.rs  transport.rs
crates/net/tests/: proptest_codec_fuzz.rs
crates/render/: Cargo.toml
crates/render/examples/: viewer.rs
crates/render/src/: cache.rs  camera.rs  chunk_manager.rs  driver.rs  gpu_mesh.rs  lib.rs  mesh.rs  particles.rs  pipeline.rs  raycast.rs  screenshot.rs  texture_atlas.rs  time.rs  ui.rs  window.rs
crates/render/src/shaders/: chunk.wgsl  particles.wgsl  skybox.wgsl  voxel.wgsl  wireframe.wgsl
crates/render/tests/: wgsl_validation.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  multiplayer.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs  metrics.rs  micro_worldtest.rs  snapshot.rs
crates/ui3d/: Cargo.toml
crates/ui3d/examples/: billboard_demo.rs  text_demo.rs
crates/ui3d/src/: lib.rs  manager.rs
crates/ui3d/src/components/: billboard.rs  button.rs  label.rs  mod.rs  panel.rs  text3d.rs
crates/ui3d/src/interaction/: mod.rs  raycaster.rs
crates/ui3d/src/layout/: mod.rs
crates/ui3d/src/render/: billboard_pipeline.rs  font_atlas.rs  mod.rs  text_renderer.rs
crates/ui3d/src/shaders/: billboard.wgsl  text.wgsl
crates/world/: Cargo.toml
crates/world/src/: aquifer.rs  armor.rs  automation.rs  biome.rs  block_properties.rs  caves.rs  chest.rs  chunk.rs  crafting.rs  dispenser.rs  drop_item.rs  dungeon.rs  enchanting.rs  farming.rs  fluid.rs  fortress.rs  furnace.rs  geode.rs  heightmap.rs  hopper.rs  interaction.rs  inventory.rs  lib.rs  light_sources.rs  lighting.rs  mineshaft.rs  mob.rs  noise.rs  pathfinding.rs  persist.rs  portals.rs  potion.rs  projectile.rs  redstone.rs  respawn_anchor.rs  ruin.rs  storage.rs  structure_template.rs  structures.rs  sugar_cane.rs  (+5 more)
crates/world/tests/: biome_seams_worldtest.rs  block_ids_match_blocks_json.rs  determinism_worldtest.rs  drop_item_lifecycle_worldtest.rs  end_boss_replay_snapshot.rs  large_scale_terrain_worldtest.rs  mob_lifecycle_worldtest.rs  nether_fortress_blaze_spawns.rs  parity_micro_snapshots.rs  passive_mob_spawn_worldtest.rs  persistence_roundtrip_worldtest.rs  proptest_chunk_seams.rs  proptest_item_stacks.proptest-regressions  proptest_item_stacks.rs  proptest_lighting.rs  proptest_persist_fuzz.proptest-regressions  proptest_persist_fuzz.rs  simulation_determinism.rs  stage4_integration_worldtest.rs  stage4_metrics_worldtest.rs  weather_cycle.rs  world_state_roundtrip_worldtest.rs
crates/world/tests/fixtures/: end_boss_replay_script.json
crates/world/tests/snapshots/: micro_brewing_awkward_ghast_tear_to_regeneration.json  micro_brewing_awkward_glistering_melon_to_healing.json  micro_brewing_awkward_magma_cream_to_fire_resistance.json  micro_brewing_awkward_phantom_membrane_to_slow_falling.json  micro_brewing_awkward_pufferfish_to_water_breathing.json  micro_brewing_awkward_rabbit_foot_to_leaping.json  micro_brewing_awkward_spider_eye_to_poison.json  micro_brewing_awkward_sugar_to_swiftness.json  micro_brewing_gunpowder_to_splash.json  micro_brewing_healing_glowstone_to_strong_healing.json  micro_brewing_swiftness_fermented_spider_eye_to_slowness.json  micro_brewing_swiftness_redstone_to_long_swiftness.json  micro_brewing_water_to_awkward_to_strength.json  micro_end_boss_loop.json  micro_end_boss_replay_script.json  micro_furnace_single_smelt.json  micro_item_sorter_lite.json  micro_lighting_seam_stitch.json  micro_mining_stone_drops.json  micro_redstone_observer_lamp_clock.json  micro_redstone_two_lever_door.json  micro_redstone_wire_propagation.json
docs/: 2025.11.12 - Reqs-spec.md  3D_UI_DESIGN.md  Deterministic-Coding-Handbook.md
src/: command_script.rs  commands.rs  commentary.rs  config.rs  content_pack_loot.rs  content_pack_spawns.rs  content_packs.rs  font_utils.rs  game.rs  headless.rs  input.rs  main.rs  menu.rs  scripted_input.rs
tests/: headless_automation_gpu_screenshot.rs  headless_automation_no_render.rs  headless_automation_uds_no_render.rs  registry_pipeline.rs  smoke.rs
tools/: record_postprocess.py
tools/atlas_packer/: Cargo.toml
tools/atlas_packer/src/: main.rs
video_+insights/: 2025.12.26 - video+insights log.md
wrk_docs/: 2025.11.12 - HLD - Deterministic Voxel Sandbox.md  2025.11.12 - HLD - MDMinecraft Voxel Engine.md  2025.11.12 - HLD - Rust Voxel Engine.md  2025.11.12 - HLD - Rust Voxel Game Engine.md  2025.11.12 - HLD - Voxel Sandbox Game Engine.md  2025.11.12 - PLN - Deterministic Voxel Sandbox Implementation.md  2025.11.12 - PLN - Rust Voxel Engine Implementation.md  2025.11.13 - HLD - Rust Voxel Engine (Revised).md  2025.11.15 - GUI - Examples and FAQ.md  (+72 more)
(+129 files in other folders)
