[workspace]
members = [
    "crates/core",
    "crates/ecs",
    "crates/world",
    "crates/physics",
    "crates/render",
    "crates/net",
    "crates/server",
    "crates/client",
    "crates/assets",
    "crates/scripting",
    "crates/testkit",
    "crates/cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
wgpu = "0.19"
quinn = "0.11"
rand = "0.8"
thiserror = "1"
bevy_ecs = "0.13"
tracing-subscriber = "0.3"
blake3 = "1.5"
bytemuck = { version = "1.18", features = ["derive"] }
lru = "0.12"
bitflags = "2.6"
