[package]
name = "mdminecraft"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["mdminecraft contributors"]
description = "A deterministic voxel sandbox engine built in Rust"

[[bin]]
name = "mdminecraft"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
pollster = { workspace = true }

# Internal dependencies
mdminecraft-core = { path = "crates/core" }
mdminecraft-world = { path = "crates/world" }
mdminecraft-render = { path = "crates/render" }
mdminecraft-assets = { path = "crates/assets" }
mdminecraft-physics = { path = "crates/physics" }

[workspace]
members = [
    "crates/core",
    "crates/ecs",
    "crates/world",
    "crates/physics",
    "crates/render",
    "crates/ui3d",
    "crates/net",
    "crates/server",
    "crates/client",
    "crates/assets",
    "crates/scripting",
    "crates/testkit",
    "crates/cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
wgpu = "0.19"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
postcard = { version = "1.0", features = ["alloc"] }
rand = "0.8"
thiserror = "1"
bevy_ecs = "0.13"
tracing-subscriber = "0.3"
blake3 = "1.5"
bytemuck = { version = "1.18", features = ["derive"] }
lru = "0.12"
bitflags = "2.6"
bincode = "1.3"
zstd = "0.13"
crc32fast = "1.4"
proptest = "1.4"
chrono = { version = "0.4", features = ["serde"] }
winit = "0.29"
glam = "0.25"
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"
pollster = "0.3"
