[package]
name = "mdminecraft-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
mdminecraft-server = { path = "../server" }
mdminecraft-net = { path = "../net" }
mdminecraft-core = { path = "../core" }
tokio = { workspace = true }
quinn = { workspace = true }
