[package]
name = "mdminecraft-net"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }
