[package]
name = "mdminecraft-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
mdminecraft-ecs = { path = "../ecs" }
mdminecraft-world = { path = "../world" }
mdminecraft-core = { path = "../core" }
mdminecraft-net = { path = "../net" }
bevy_ecs = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
