[package]
name = "mdminecraft-world"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
mdminecraft-core = { path = "../core" }
tracing = { workspace = true }
bitflags = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
mdminecraft-testkit = { path = "../testkit" }
