[package]
name = "mdminecraft-world"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mdminecraft-core = { path = "../core" }
tracing = { workspace = true }
bitflags = { workspace = true }
lru = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
mdminecraft-testkit = { path = "../testkit" }
